--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      span { padding: 3px; position: fixed; bottom: 50px; width: 100%;}
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #messages { list-style-type: none; margin: 0; padding: 0; }
@@ -15,6 +16,7 @@
   </head>
   <body>
     <ul id="messages"></ul>
+    <span id="typing"></span>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
@@ -22,7 +24,9 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
+      //connecting to server
       var socket = io();
+      //sending messages onsubmit event
       $('form').submit(function(){
         if($('#m').val() != ''){
           if(sessionStorage.getItem("nick") != '' && sessionStorage.getItem("nick") != null){
@@ -32,15 +36,55 @@
             $('#messages').append($('<li>').text('unknown user says: ' + $('#m').val()));
             socket.emit('chat message', 'unknown user says: ' + $('#m').val());
           }
+          //clear typing field
+          $('#typing').text('');
+          clearTimeout(timeout);
+          timeout = setTimeout(timeoutFunction, 0);
         }
         $('#m').val('');
         return false;
       });
+      //appending incoming messages to html
       socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
       });
+      //appending incoming connection events
       socket.on('connection message', function(msg){
         $('#messages').append($('<li>').text(msg));
+      });
+
+      //timeout variables and functions for 'user is typing..'
+      var typing = false;
+      var timeout = undefined;
+
+      function timeoutFunction() {
+        typing = false;
+        socket.emit("typing", {'typing':false});
+      }
+
+      $("#m").keypress(function(e){
+        if (e.which !== 13) {
+          if (typing === false && $("#m").is(":focus")) {
+            typing = true;
+            if(sessionStorage.getItem("nick") != '' && sessionStorage.getItem("nick") != null){
+              socket.emit("typing", {'typing':true, 'who':sessionStorage.getItem("nick")});
+            }else{
+              socket.emit("typing", {'typing':true, 'who':'someone'});
+            }
+          } else {
+            clearTimeout(timeout);
+            timeout = setTimeout(timeoutFunction, 1000);
+          }
+        }
+      });
+
+      socket.on("typing", function(data) {
+        if (data.typing) {
+            $('#typing').text(data.msg);
+            timeout = setTimeout(timeoutFunction, 1000);
+        } else {
+          $('#typing').text('');
+        }
       });
     </script>
   </body>
