--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      //connecting to server
+      //connecting to server, to a specific namespace
       var socket;
       if(sessionStorage.getItem("nick") != '' && sessionStorage.getItem("nick") != null){
-        socket = io('', {query: 'user=' + sessionStorage.getItem("nick")});
+        socket = io('/' + sessionStorage.getItem("namespace"), {query: 'user=' + sessionStorage.getItem("nick")});
       }else{
-        socket = io('', {query: 'user=unknown'});
+        socket = io('/' + sessionStorage.getItem("namespace"), {query: 'user=unknown'});
       }
+      socket.emit('ready');
 
       //sending messages onsubmit event
       $('form').submit(function(){
@@ -62,7 +63,7 @@
         $('#m').val('');
         return false;
       });
-      
+
       //appending incoming messages to html
       socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
@@ -71,7 +72,7 @@
       //appending incoming connection events
       socket.on('connection', function(data){
         if(data.connected){
-            $('#messages').append($('<li>').text(data.user + ' is connected'));
+            $('#messages').append($('<li>').text(data.user + ' is connected to ' + data.namespace));
             $('#online-users').append($('<li id="'+data.user+'">').text(data.user));
         }else{
             $('#messages').append($('<li>').text(data.user + '  disconnected'));
